// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toOpenApi — fixture snapshots > all-features → JSON matches snapshot 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "Items API",
    "version": "1.0.0"
  },
  "paths": {
    "/items": {
      "get": {
        "responses": {
          "200": {
            "description": "Page of items",
            "content": {
              "application/json": {
                "schema": {
                  "type": "object",
                  "properties": {
                    "items": {
                      "type": "array",
                      "items": {
                        "$ref": "#/components/schemas/Item"
                      }
                    },
                    "total": {
                      "type": "integer",
                      "format": "int64"
                    }
                  },
                  "required": [
                    "items",
                    "total"
                  ]
                }
              }
            }
          }
        },
        "tags": [
          "items"
        ],
        "summary": "List items",
        "description": "Paginated listing of items.",
        "operationId": "listItems",
        "parameters": [
          {
            "name": "page",
            "in": "query",
            "schema": {
              "type": "integer",
              "format": "int32",
              "default": 1,
              "minimum": 1
            },
            "description": "Page number (1-based)"
          },
          {
            "name": "size",
            "in": "query",
            "schema": {
              "type": "integer",
              "default": 20,
              "minimum": 1,
              "maximum": 100
            }
          },
          {
            "name": "sort",
            "in": "query",
            "schema": {
              "type": "string",
              "default": "asc",
              "enum": [
                "asc",
                "desc"
              ]
            }
          }
        ],
        "security": [
          {
            "bearerAuth": []
          }
        ]
      },
      "post": {
        "responses": {
          "201": {
            "description": "Created",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Item"
                }
              }
            },
            "headers": {
              "Location": {
                "schema": {
                  "type": "string",
                  "format": "uri"
                },
                "required": true,
                "description": "URI of the created item"
              }
            }
          }
        },
        "tags": [
          "items"
        ],
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "oneOf": [
                  {
                    "$ref": "#/components/schemas/Item"
                  },
                  {
                    "type": "object",
                    "properties": {
                      "name": {
                        "type": "string"
                      },
                      "tagId": {
                        "type": [
                          "string",
                          "null"
                        ]
                      }
                    },
                    "required": [
                      "name"
                    ]
                  }
                ]
              }
            }
          },
          "required": true
        },
        "security": [
          {
            "bearerAuth": []
          }
        ]
      }
    },
    "/items/{id}": {
      "delete": {
        "responses": {
          "204": {
            "description": "No content"
          },
          "404": {
            "description": "Not found"
          }
        },
        "tags": [
          "items",
          "admin"
        ],
        "deprecated": true,
        "parameters": [
          {
            "name": "id",
            "in": "path",
            "schema": {
              "type": "string",
              "format": "uuid"
            },
            "required": true
          }
        ],
        "security": [
          {
            "adminKey": []
          }
        ]
      }
    }
  },
  "components": {
    "schemas": {
      "Item": {
        "type": "object",
        "properties": {
          "id": {
            "type": "string",
            "format": "uuid"
          },
          "name": {
            "type": "string"
          },
          "price": {
            "type": "number",
            "format": "double",
            "exclusiveMinimum": 0
          },
          "tags": {
            "type": "array",
            "items": {
              "type": "string"
            },
            "uniqueItems": true
          }
        },
        "required": [
          "id",
          "name",
          "price"
        ]
      }
    },
    "securitySchemes": {
      "bearerAuth": {
        "type": "http",
        "scheme": "bearer",
        "bearerFormat": "JWT"
      },
      "adminKey": {
        "type": "apiKey",
        "name": "X-Admin-Key",
        "in": "header"
      }
    }
  },
  "tags": [
    {
      "name": "items"
    },
    {
      "name": "admin"
    }
  ]
}
"
`;

exports[`toOpenApi — fixture snapshots > all-features → YAML matches snapshot 1`] = `
"openapi: 3.1.0
info:
  title: Items API
  version: 1.0.0
  description: An items service.
paths:
  /items:
    get:
      responses:
        "200":
          description: Page of items
          content:
            application/json:
              schema:
                type: object
                properties:
                  items:
                    type: array
                    items:
                      $ref: "#/components/schemas/Item"
                  total:
                    type: integer
                    format: int64
                required:
                  - items
                  - total
      tags:
        - items
      summary: List items
      description: Paginated listing of items.
      operationId: listItems
      parameters:
        - name: page
          in: query
          schema:
            type: integer
            format: int32
            default: 1
            minimum: 1
          description: Page number (1-based)
        - name: size
          in: query
          schema:
            type: integer
            default: 20
            minimum: 1
            maximum: 100
        - name: sort
          in: query
          schema:
            type: string
            default: asc
            enum:
              - asc
              - desc
      security:
        - bearerAuth: []
    post:
      responses:
        "201":
          description: Created
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/Item"
          headers:
            Location:
              schema:
                type: string
                format: uri
              required: true
              description: URI of the created item
      tags:
        - items
      requestBody:
        content:
          application/json:
            schema:
              oneOf:
                - $ref: "#/components/schemas/Item"
                - type: object
                  properties:
                    name:
                      type: string
                    tagId:
                      type:
                        - string
                        - "null"
                  required:
                    - name
        required: true
      security:
        - bearerAuth: []
  /items/{id}:
    delete:
      responses:
        "204":
          description: No content
        "404":
          description: Not found
      tags:
        - items
        - admin
      deprecated: true
      parameters:
        - name: id
          in: path
          schema:
            type: string
            format: uuid
          required: true
      security:
        - adminKey: []
components:
  schemas:
    Item:
      type: object
      properties:
        id:
          type: string
          format: uuid
        name:
          type: string
        price:
          type: number
          format: double
          exclusiveMinimum: 0
        tags:
          type: array
          items:
            type: string
          uniqueItems: true
      required:
        - id
        - name
        - price
  securitySchemes:
    bearerAuth:
      type: http
      scheme: bearer
      bearerFormat: JWT
    adminKey:
      type: apiKey
      name: X-Admin-Key
      in: header
tags:
  - name: items
  - name: admin
"
`;

exports[`toOpenApi — fixture snapshots > route-with-body → YAML matches snapshot 1`] = `
"openapi: 3.1.0
info:
  title: Users API
  version: 1.0.0
paths:
  /users:
    post:
      responses:
        "201":
          description: Created
          content:
            application/json:
              schema:
                type: object
                properties:
                  id:
                    type: integer
                    format: int64
                required:
                  - id
        "400":
          description: Bad request
      tags:
        - users
      operationId: createUser
      requestBody:
        content:
          application/json:
            schema:
              type: object
              properties:
                email:
                  type: string
                  format: email
                age:
                  type: integer
                  format: int32
                  minimum: 18
                  maximum: 120
              required:
                - email
        required: true
tags:
  - name: users
"
`;

exports[`toOpenApi — fixture snapshots > shared-schemas → YAML matches snapshot 1`] = `
"openapi: 3.1.0
info:
  title: Users API
  version: 1.0.0
paths:
  /users/{id}:
    get:
      responses:
        "200":
          description: User
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/User"
        "404":
          description: Not found
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/ProblemDetails"
      parameters:
        - name: id
          in: path
          schema:
            type: integer
            format: int64
          required: true
    patch:
      responses:
        "200":
          description: Updated
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/User"
      parameters:
        - name: id
          in: path
          schema:
            type: integer
            format: int64
          required: true
      requestBody:
        content:
          application/json:
            schema:
              $ref: "#/components/schemas/UpdateUserDto"
        required: true
components:
  schemas:
    User:
      type: object
      properties:
        id:
          type: integer
          format: int64
        email:
          type: string
          format: email
        name:
          type:
            - string
            - "null"
      required:
        - id
        - email
    UpdateUserDto:
      type: object
      properties:
        email:
          type: string
          format: email
        name:
          type: string
    ProblemDetails:
      type: object
      properties:
        title:
          type: string
        status:
          type: integer
        detail:
          type: string
"
`;

exports[`toOpenApi — fixture snapshots > single-route → YAML matches snapshot 1`] = `
"openapi: 3.1.0
info:
  title: Demo API
  version: 1.0.0
paths:
  /health:
    get:
      responses:
        "200":
          description: OK
      summary: Healthcheck
"
`;
